Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10449

TBF policy can't be set correctly

XMLWordPrintable

    • 3
    • 9223372036854775807

      The issue can be reproduced easily by the following steps:

      $ lctl set_param ost.OSS.ost_io.nrs_policies="tbf nid"
      $ lctl set_param ost.OSS.ost_io.nrs_policies="tbf"
      lctl get_param ost.OSS.ost_io.nrs_policies
      ost.OSS.ost_io.nrs_policies=
      
      regular_requests:
       ...
        - name: tbf nid
          state: started
          fallback: no
          queued: 0                   
          active: 0                   
       ...
      high_priority_requests:
      ...
        - name: tbf nid
          state: started
          fallback: no
          queued: 0                   
          active: 0                   
      ...
      

      Generic "tbf" police can't be set correctly after setting "tbf <rule>".

            qian Qian Yingjin (Inactive)
            emoly.liu Emoly Liu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: